# home1/Resources/swift-api/OpenAPIClient/Classes/OpenAPIs/Models/Weather.swift
@@ -1,0 +1,28 @@
+//
+// Weather.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+
+
+
+public struct Weather: Codable {
+
+    public var id: Double?
+    public var main: String?
+    public var description: String?
+    public var icon: String?
+
+    public init(id: Double?, main: String?, description: String?, icon: String?) {
+        self.id = id
+        self.main = main
+        self.description = description
+        self.icon = icon
+    }
+
+
+}
+
